# Release-Copilot

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
config/: queries.yml  release_audit_config.json
scripts/: _common_args.py  run_local.bat  run_local.sh  run_ui.bat  run_ui.sh  write_jira_token.py
src/: app.py
src/agents/: git_historian.py  jira_analyst.py  publisher.py  report_writer.py
src/config/: env_wizard.py  settings.py
src/crew/: tasks.py  team.py
src/graph/: graph.py  states.py
src/indexes/: query.py
src/kit/: cost_meter.py  errors.py  registry.py
src/release_copilot/: app.py
src/release_copilot/agents/: git_historian.py  jira_analyst.py  planner.py  publisher.py  report_writer.py
src/release_copilot/commands/: __init__.py  audit_from_config.py
src/release_copilot/config/: env_wizard.py  settings.py
src/release_copilot/crew/: team.py
src/release_copilot/graph/: graph.py  states.py
src/release_copilot/indexes/: build_knowledge_index.py  query.py
src/release_copilot/kit/: caching.py  cost_meter.py  jira_key.py  memory.py
src/release_copilot/reporting/: llm_summary.py  report_builder.py
src/release_copilot/tools/: bitbucket_ping.py  bitbucket_tools.py  config_loader.py  confluence_tools.py  jira_tools.py
src/tools/: bitbucket_tools.py  confluence_tools.py  file_tools.py  jira_tools.py
src/ui/: streamlit_app.py
tests/: test_caching.py  test_config_loader.py  test_jira_analyst.py  test_jira_key.py  test_jql_helpers.py  test_report_writer.py  test_utils.py
(+2 files in other folders)
